# finance-bench-retrieval

./: .gitignore  evaluation_playground.ipynb  main.py  pyproject.toml
.cursor/rules/: python-formatting.mdc
data/ground_truth/: financebench_full.jsonl  financebench_full.parquet  sample.json
data/markdown/: 3M_2015_10K.md  3M_2016_10K.md  3M_2017_10K.md  3M_2018_10K.md  3M_2019_10K.md  3M_2020_10K.md  3M_2021_10K.md  3M_2022_10K.md  3M_2023Q2_10Q.md  ACTIVISIONBLIZZARD_2015_10K.md  ACTIVISIONBLIZZARD_2016_10K.md  ACTIVISIONBLIZZARD_2017_10K.md  ACTIVISIONBLIZZARD_2018_10K.md  ACTIVISIONBLIZZARD_2019_10K.md  ACTIVISIONBLIZZARD_2020_10K.md  ACTIVISIONBLIZZARD_2021_10K.md  ACTIVISIONBLIZZARD_2022_10K.md  ACTIVSIONBLIZZARD_2023Q2_10Q.md  ADOBE_2015_10K.md  ADOBE_2016_10K.md  ADOBE_2017_10K.md  ADOBE_2018_10K.md  ADOBE_2019_10K.md  ADOBE_2020_10K.md  ADOBE_2021_10K.md  ADOBE_2022Q2_10Q.md  ADOBE_2022_10K.md  AES_2015_10K.md  AES_2016_10K.md  AES_2017_10K.md  AES_2018_10K.md  AES_2019_10K.md  AES_2020_10K.md  AES_2021_10K.md  AES_2022_10K.md  AMAZON_2015_10K.md  AMAZON_2016_10K.md  AMAZON_2017_10K.md  AMAZON_2018_10K.md  AMAZON_2019_10K.md  (+322 more)
src/: agentic_rag.py  embed.py  evaluate.py  ingest.py  inspect_evals.ipynb  prepare.py  schema_check.ipynb  search_tools.py  simple_rag.py
