[project]
name = "finance-bench-retrieval"
version = "0.1.0"
description = "Agentic Retrieval for Finance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie[turbopuffer]>=1.0.7",
    "fastparquet>=2024.11.0",
    "loguru>=0.7.3",
    "markitdown[all]>=0.1.1",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.1",
    "turbopuffer[fast]>=0.4.1",
]
