[project]
name = "finance-bench-retrieval"
version = "0.1.0"
description = "Agentic Retrieval for Finance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie[hub]>=1.0.7",
    "fastembed>=0.7.0",
    "fastparquet>=2024.11.0",
    "joblib>=1.5.0",
    "langchain-openai>=0.3.17",
    "langchain>=0.3.25",
    "langchain-core>=0.3.60",
    "langgraph>=0.4.5",
    "loguru>=0.7.3",
    "markitdown[all]>=0.1.1",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "turbopuffer[fast]>=0.4.1",
]
